[metadata]
name = cherry-ua-staging
version = 0.0.9
author = Abhishek Kumar
author_email = abhishekk728@yahoo.com
description = A library to generate random user-agent
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/abhishek72850/cherry-ua/
project_urls =
    Bug Tracker = https://github.com/abhishek72850/cherry-ua/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src